dump/src/reader/compat/snapshots/dump__reader__compat__v4_to_v5__test__compat_v4_v5-3.snap
---
source: dump/src/reader/compat/v4_to_v5.rs
expression: tasks
---
[
  {
    "id": 9,
    "content": {
      "DocumentAddition": {
        "index_uid": "movies_2",
        "content_uuid": "3b12a971-bca2-4716-9889-36ffb715ae1d",
        "merge_strategy": "ReplaceDocuments",
        "primary_key": null,
        "documents_count": 200,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:49.125132233Z"
      }
    ]
  },
  {
    "id": 8,
    "content": {
      "DocumentAddition": {
        "index_uid": "movies",
        "content_uuid": "cae3205a-6016-471b-81de-081a195f098c",
        "merge_strategy": "ReplaceDocuments",
        "primary_key": null,
        "documents_count": 100,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:49.114226973Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:49.125918825Z",
          "batch_id": 8
        }
      },
      {
        "Processing": "2022-10-06T12:53:49.125930546Z"
      },
      {
        "Succeeded": {
          "result": {
            "DocumentAddition": {
              "indexed_documents": 100
            }
          },
          "timestamp": "2022-10-06T12:53:49.785862546Z"
        }
      }
    ]
  },
  {
    "id": 7,
    "content": {
      "DocumentAddition": {
        "index_uid": "dnd_spells",
        "content_uuid": "7ba1eaa0-d2fb-4852-8d00-f35ed166728f",
        "merge_strategy": "ReplaceDocuments",
        "primary_key": "index",
        "documents_count": 10,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:41.070732179Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:41.085563291Z",
          "batch_id": 7
        }
      },
      {
        "Processing": "2022-10-06T12:53:41.085563961Z"
      },
      {
        "Succeeded": {
          "result": {
            "DocumentAddition": {
              "indexed_documents": 10
            }
          },
          "timestamp": "2022-10-06T12:53:41.116036186Z"
        }
      }
    ]
  },
  {
    "id": 6,
    "content": {
      "DocumentAddition": {
        "index_uid": "dnd_spells",
        "content_uuid": "f2fb7d6e-11b6-45d9-aa7a-9495a567a275",
        "merge_strategy": "ReplaceDocuments",
        "primary_key": null,
        "documents_count": 10,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:40.831649057Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:40.834515892Z",
          "batch_id": 6
        }
      },
      {
        "Processing": "2022-10-06T12:53:40.834516572Z"
      },
      {
        "Failed": {
          "error": {
            "message": "The primary key inference process failed because the engine did not find any fields containing `id` substring in their name. If your document identifier does not contain any `id` substring, you can set the primary key of the index.",
            "code": "unretrievable_error_code",
            "type": "invalid_request",
            "link": "https://docs.meilisearch.com/errors#unretrievable_error_code"
          },
          "timestamp": "2022-10-06T12:53:40.905384918Z"
        }
      }
    ]
  },
  {
    "id": 5,
    "content": {
      "DocumentAddition": {
        "index_uid": "products",
        "content_uuid": "f269fe46-36fe-4fe7-8c4e-2054f1b23594",
        "merge_strategy": "ReplaceDocuments",
        "primary_key": "sku",
        "documents_count": 10,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:40.576727649Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:40.587595408Z",
          "batch_id": 5
        }
      },
      {
        "Processing": "2022-10-06T12:53:40.587596158Z"
      },
      {
        "Succeeded": {
          "result": {
            "DocumentAddition": {
              "indexed_documents": 10
            }
          },
          "timestamp": "2022-10-06T12:53:40.603035979Z"
        }
      }
    ]
  },
  {
    "id": 4,
    "content": {
      "DocumentAddition": {
        "index_uid": "products",
        "content_uuid": "7d1ea292-cdb6-4f47-8b25-c2ddde89035c",
        "merge_strategy": "ReplaceDocuments",
        "primary_key": null,
        "documents_count": 10,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:39.979427178Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:39.986159313Z",
          "batch_id": 4
        }
      },
      {
        "Processing": "2022-10-06T12:53:39.986160113Z"
      },
      {
        "Failed": {
          "error": {
            "message": "The primary key inference process failed because the engine did not find any fields containing `id` substring in their name. If your document identifier does not contain any `id` substring, you can set the primary key of the index.",
            "code": "unretrievable_error_code",
            "type": "invalid_request",
            "link": "https://docs.meilisearch.com/errors#unretrievable_error_code"
          },
          "timestamp": "2022-10-06T12:53:39.98921592Z"
        }
      }
    ]
  },
  {
    "id": 3,
    "content": {
      "SettingsUpdate": {
        "index_uid": "products",
        "settings": {
          "displayedAttributes": "NotSet",
          "searchableAttributes": "NotSet",
          "filterableAttributes": "NotSet",
          "sortableAttributes": "NotSet",
          "rankingRules": "NotSet",
          "stopWords": "NotSet",
          "synonyms": {
            "Set": {
              "android": [
                "phone",
                "smartphone"
              ],
              "iphone": [
                "phone",
                "smartphone"
              ],
              "phone": [
                "smartphone",
                "iphone",
                "android"
              ]
            }
          },
          "distinctAttribute": "NotSet",
          "typoTolerance": "NotSet",
          "faceting": "NotSet",
          "pagination": "NotSet"
        },
        "is_deletion": false,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:39.360187055Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:39.371250258Z",
          "batch_id": 3
        }
      },
      {
        "Processing": "2022-10-06T12:53:39.371250918Z"
      },
      {
        "Processing": "2022-10-06T12:53:39.373988491Z"
      },
      {
        "Succeeded": {
          "result": "Other",
          "timestamp": "2022-10-06T12:53:39.449840865Z"
        }
      }
    ]
  },
  {
    "id": 2,
    "content": {
      "SettingsUpdate": {
        "index_uid": "movies",
        "settings": {
          "displayedAttributes": "NotSet",
          "searchableAttributes": "NotSet",
          "filterableAttributes": "NotSet",
          "sortableAttributes": "NotSet",
          "rankingRules": {
            "Set": [
              "words",
              "typo",
              "proximity",
              "attribute",
              "sort",
              "exactness",
              "release_date:asc"
            ]
          },
          "stopWords": "NotSet",
          "synonyms": "NotSet",
          "distinctAttribute": "NotSet",
          "typoTolerance": "NotSet",
          "faceting": "NotSet",
          "pagination": "NotSet"
        },
        "is_deletion": false,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:39.143829637Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:39.154803808Z",
          "batch_id": 2
        }
      },
      {
        "Processing": "2022-10-06T12:53:39.154804558Z"
      },
      {
        "Processing": "2022-10-06T12:53:39.157501241Z"
      },
      {
        "Succeeded": {
          "result": "Other",
          "timestamp": "2022-10-06T12:53:39.160263154Z"
        }
      }
    ]
  },
  {
    "id": 1,
    "content": {
      "SettingsUpdate": {
        "index_uid": "movies",
        "settings": {
          "displayedAttributes": "NotSet",
          "searchableAttributes": "NotSet",
          "filterableAttributes": {
            "Set": [
              "genres",
              "id"
            ]
          },
          "sortableAttributes": {
            "Set": [
              "release_date"
            ]
          },
          "rankingRules": "NotSet",
          "stopWords": "NotSet",
          "synonyms": "NotSet",
          "distinctAttribute": "NotSet",
          "typoTolerance": "NotSet",
          "faceting": "NotSet",
          "pagination": "NotSet"
        },
        "is_deletion": false,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:38.922837679Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:38.937712641Z",
          "batch_id": 1
        }
      },
      {
        "Processing": "2022-10-06T12:53:38.937713141Z"
      },
      {
        "Processing": "2022-10-06T12:53:38.940482335Z"
      },
      {
        "Succeeded": {
          "result": "Other",
          "timestamp": "2022-10-06T12:53:38.953566059Z"
        }
      }
    ]
  },
  {
    "id": 0,
    "content": {
      "DocumentAddition": {
        "index_uid": "movies",
        "content_uuid": "cee1eef7-fadd-4970-93dc-25518655175f",
        "merge_strategy": "ReplaceDocuments",
        "primary_key": null,
        "documents_count": 10,
        "allow_index_creation": true
      }
    },
    "events": [
      {
        "Created": "2022-10-06T12:53:38.710611568Z"
      },
      {
        "Batched": {
          "timestamp": "2022-10-06T12:53:38.717455314Z",
          "batch_id": 0
        }
      },
      {
        "Processing": "2022-10-06T12:53:38.717456194Z"
      },
      {
        "Succeeded": {
          "result": {
            "DocumentAddition": {
              "indexed_documents": 10
            }
          },
          "timestamp": "2022-10-06T12:53:38.811687295Z"
        }
      }
    ]
  }
]
