dump/src/reader/compat/snapshots/dump__reader__compat__v4_to_v5__test__compat_v4_v5-4.snap
---
source: dump/src/reader/compat/v4_to_v5.rs
expression: keys
---
[
  {
    "description": "Default Search API Key (Use it to search from the frontend)",
    "name": null,
    "uid": "2b8d662e-8089-4115-873f-6a4e517053b8",
    "actions": [
      "search"
    ],
    "indexes": [
      "Star"
    ],
    "expires_at": null,
    "created_at": "2022-10-06T12:53:33.424274047Z",
    "updated_at": "2022-10-06T12:53:33.424274047Z"
  },
  {
    "description": "Default Admin API Key (Use it for all other operations. Caution! Do not use it on a public frontend)",
    "name": null,
    "uid": "a711024d-ef01-43ff-bd35-e05434e703f7",
    "actions": [
      "*"
    ],
    "indexes": [
      "Star"
    ],
    "expires_at": null,
    "created_at": "2022-10-06T12:53:33.417707446Z",
    "updated_at": "2022-10-06T12:53:33.417707446Z"
  }
]
